client list using search API
